# cidipi

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
cidipi/: client.py  event.py  interface.py  models.py  utils.py
cidipi/accessibility/: __init__.py  commands.py  events.py  types.py
cidipi/animation/: __init__.py  commands.py  events.py  types.py
cidipi/audits/: __init__.py  commands.py  events.py  types.py
cidipi/autofill/: __init__.py  commands.py  events.py  types.py
cidipi/backgroundservice/: __init__.py  commands.py  events.py  types.py
cidipi/browser/: __init__.py  commands.py  events.py  types.py
cidipi/cachestorage/: __init__.py  commands.py  types.py
cidipi/cast/: __init__.py  commands.py
cidipi/console/: __init__.py  commands.py  events.py  types.py
cidipi/css/: __init__.py  commands.py  events.py  types.py
cidipi/database/: __init__.py  commands.py  events.py  types.py
cidipi/debugger/: __init__.py  commands.py  events.py  types.py
cidipi/deviceaccess/: __init__.py  commands.py  events.py  types.py
cidipi/deviceorientation/: __init__.py
cidipi/dom/: __init__.py  commands.py  events.py  types.py
cidipi/domdebugger/: __init__.py  commands.py  types.py
cidipi/domsnapshot/: __init__.py  commands.py  types.py
cidipi/domstorage/: __init__.py  commands.py  events.py
cidipi/emulation/: __init__.py  commands.py  types.py
cidipi/eventbreakpoints/: __init__.py
cidipi/extensions/: __init__.py
cidipi/fedcm/: __init__.py  commands.py  events.py  types.py
cidipi/fetch/: __init__.py  commands.py  events.py  types.py
cidipi/headlessexperimental/: __init__.py  commands.py
cidipi/heapprofiler/: __init__.py  commands.py  events.py  types.py
cidipi/indexeddb/: __init__.py  commands.py  types.py
cidipi/input/: __init__.py  commands.py  events.py  types.py
cidipi/inspector/: __init__.py  commands.py
cidipi/io/: __init__.py  commands.py
cidipi/layertree/: __init__.py  commands.py  events.py  types.py
cidipi/log/: __init__.py  commands.py  events.py  types.py
cidipi/media/: __init__.py  events.py
cidipi/memory/: types.py  (+2 more)
examples/: README.md  docker-compose.yml  get_html.py  goto.py  js_script.py
tools/: build.sh  generator.py
(+232 files in other folders)
